--- a/countrylist/package.json
+++ b/countrylist/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.5",
     "@types/react-table": "^7.7.14",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
