--- a/countrylist/package.json
+++ b/countrylist/package.json
@@ -11,11 +11,13 @@
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
-    "react-data-grid": "^7.0.0-beta.34",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
