--- a/countrylist/package.json
+++ b/countrylist/package.json
@@ -13,7 +13,6 @@
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-axios": "^2.0.6",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -40,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.22.5",
     "@babel/plugin-transform-runtime": "^7.22.5",
     "@types/react-table": "^7.7.14",
     "eslint": "^8.43.0",
